Html code beatufied, layout fixed (on small laptop devices)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,17 +56,17 @@ h3 {
 
 #dashboard {
 	font-size: 0.85rem;
-	top: 0;
+	top: 6%;
 	background-color: #649B92;
 	color: rgb(32, 30, 28);
 	position: relative;
-	box-sizing: content-box;
 	border: 0.3rem solid #68A376;
 	border-radius: 0.5rem;
 	max-width: 30%;
 	text-align: center;
 	margin-left: 3%;
 	margin-bottom: 2rem;
+    padding-bottom:0.8rem;
 }
 
 .rules {
@@ -83,8 +83,7 @@ h3 {
 	border: 0.5rem solid #68A376;
 	border-radius: 0.5rem;
 	text-align: center;
-	padding-bottom: 1.4rem;
-	top: 1.5%;
+	top: 6%;
 	bottom: 60rem;
 }
 
@@ -99,18 +98,18 @@ h3 {
 
 canvas {
 	background-color: #f1f1f1;
-	position: absolute;
 	width: 56%;
 	height: 98%;
 	margin-bottom: 12%;
 	left: 38%;
 	border: 1.2rem double #649B92;
 	border-radius: 0.5rem;
+    top: 7rem;
 }
 
 #myCanvas {
 	position: absolute;
-	margin-top: 40%;
+	
 }
 
 .navigation,
